Use stdlib for codepage handling, tokenization and coding of strings.

--- a/source/pdf/tsconfig.json
+++ b/source/pdf/tsconfig.json
@@ -9,12 +9,5 @@
 		"./",
 		"./cp_pdfdoc.json"
 	],
-	"references": [
-		{
-			"path": "../codepage/"
-		},
-		{
-			"path": "../truetype/"
-		}
-	]
+	"references": []
 }
