Add shared subproject and move bistreams there.

--- a/source/shared/tsconfig.json
+++ b/source/shared/tsconfig.json
@@ -7,11 +7,7 @@
 	"extends": "../../tsconfig.json",
 	"include": [
 		"./",
-		"./cp_pdfdoc.json"
+		"./cppdfdoc.json"
 	],
-	"references": [
-		{
-			"path": "../shared/"
-		}
-	]
+	"references": []
 }
